--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="boton_capturar">Capturar</string>
     <string name="campo_nombre">Nombre del Fugitivo</string>
     <string name="etiqueta_desarrollo">Desarrollado por:</string>
-    <string name="nombre_desarrollador">Alejandro Rincón</string>
+    <string name="nombre_desarrollador">Edgar Hernández</string>
     <string name="etiqueta_empresa">D.W. Training S.C.</string>
     <string name="etiqueta_mensaje">Mensaje…</string>
     <string name="titulo_activity_agregar">Nuevo fugitivo</string>
