--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">DroidBountyHunterKotlin</string>
+<!--    <string name="app_name">DroidBountyHunterKotlin</string>-->
+    <string name="app_name">SRK Edgar Hdez</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
     <string name="tab_text_3">Tab 3</string>
@@ -15,7 +16,7 @@
     <string name="campo_nombre">Nombre del Fugitivo</string>
     <string name="etiqueta_desarrollo">Desarrollado por:</string>
     <string name="nombre_desarrollador">Edgar Hernández</string>
-    <string name="etiqueta_empresa">D.W. Training S.C.</string>
+    <string name="etiqueta_empresa">SRK-CHH</string>
     <string name="etiqueta_mensaje">Mensaje…</string>
     <string name="titulo_activity_agregar">Nuevo fugitivo</string>
     <string name="titulo_activity_detalle">Detalle Fugitivo</string>
